fixed overflow issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,7 @@ a {
 
 p.huge {
 	font-family: SourceSansBold, sans-serif;
-	font-size: 7.1em;
-	margin: -3%;
+	font-size: 6.8em;
 	text-align: center;
 }
 
